--- a/content/pages/index.mdx
+++ b/content/pages/index.mdx
@@ -1,3 +1,20 @@
-<SEO title="Home" />
+import Banner from "../../src/components/banner"
 
-# Bragg Creek
+<SEO title="Home" />
+<Banner />
+
+The Bragg Creek and Redwood Meadows Wellness Network (formerly Bragg Creek and Area Wellness Committee) formed in March 2014 during the ongoing 2013 flood recovery effort. Initially, we focused on psychosocial recovery and completed two extensive door-to-door campaigns in the Bragg Creek and Redwood Meadows. Our network has grown to include local residents, social service agencies, healthcare providers, and community groups. As we have grown and time has passed, our focus has broadened to include diverse wellness initiatives aimed at enhancing resident’s lives beyond disaster response. Past projects have included advocating for the FCSS Resource Office, Gratitude Postcards, and the Screenagers educational events.
+
+We are an open group and encourage new members to join us. We meet several times per year in either Redwood Meadows or Bragg Creek, alternating between daytime and evening meetings. The meetings have a casual tone and flexible structure although we do have a chair, follow an agenda, and respect time. The primary purpose is to build relationships, share information, and collaborate. Our experience has been that the partnerships formed at our table create unique opportunities for positive change that might otherwise be missed (e.g. programs from the Cochrane library now offered locally). There are no additional volunteer expectations and we know it won’t always be possible to attend every meeting. We want to hear from you whether you have lived in the area for a few months or 40 years – every person can contribute knowledge and ideas to the network.
+
+## Our Values
+
+We are respectful and kind in our actions and our speech
+
+We are always open to new members and new ideas
+
+We balance transparency of discussion and action with a sensitivity towards confidentiality
+
+We listen to input and sharing with empathy and understanding
+
+We encourage a positive, collaborative, and community-centred approach when addressing wellness
